--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang = 'ru'>
     <head>
         <meta charset="UTF-8">
+        <link rel = "stylesheet" href="style.css">
     </head>
     <body>
-
+        <div><p>еблом не щелкай</p></div>
+        <div class="discord-button">Ring</div>
+        <script src="script.js"></script>
     </body>
 </html>
